Adding "func" types
The `type` now allows functions, such as "func () bool". The `returns` can be used to return such a function and the contents can contain references to other services like all other Go expressions.

--- a/dingotest/dingo.yml
+++ b/dingotest/dingo.yml
@@ -43,3 +43,13 @@ services:
     type: '*SendEmail'
     returns: NewSendEmail()
     error: panic(err)
+
+  AFunc:
+    type: func (int, int) (bool, bool)
+    returns: |
+      func (a, b int) (c, d bool) {
+        c = (a + b) != 0
+        d = @{SomeEnv} != ""
+
+        return
+      }
