fix:     has scope: 'prototype' and arguments use  @{SendEmail()} error panic: runtime error: invalid memory address or nil pointer dereference

--- a/dingotest/dingo.yml
+++ b/dingotest/dingo.yml
@@ -90,3 +90,11 @@ services:
     type: '*HTTPSignerClient'
     properties:
       CreateSigner: '@{Signer}'
+
+  CustomerWelcomePrototype:
+    type: '*CustomerWelcome'
+    returns: NewCustomerWelcome(@{SendEmail})
+    arguments:
+      appid: 'string'
+    scope: 'prototype'
+
