fix: PackageName is empty

--- a/dingotest/dingo.yml
+++ b/dingotest/dingo.yml
@@ -97,4 +97,11 @@ services:
     arguments:
       appid: 'string'
     scope: 'prototype'
-
+  CustomerWelcomePrototype2:
+    type: '*CustomerWelcome'
+    returns: NewCustomerWelcome(@{SendEmail})
+    arguments:
+      canaryConfig: '*v1.ObjectMetaAccessor'
+    scope: 'prototype'
+    import:
+      - 'k8s.io/apimachinery/pkg/apis/meta/v1'
