Fix prototype bug (#18)
* fix:     has scope: 'prototype' and arguments use  @{SendEmail()} error panic: runtime error: invalid memory address or nil pointer dereference

* fix: PackageName is empty

Co-authored-by: wuji <wuji@gaoding.com>

--- a/dingotest/dingo.yml
+++ b/dingotest/dingo.yml
@@ -90,3 +90,18 @@ services:
     type: '*HTTPSignerClient'
     properties:
       CreateSigner: '@{Signer}'
+
+  CustomerWelcomePrototype:
+    type: '*CustomerWelcome'
+    returns: NewCustomerWelcome(@{SendEmail})
+    arguments:
+      appid: 'string'
+    scope: 'prototype'
+  CustomerWelcomePrototype2:
+    type: '*CustomerWelcome'
+    returns: NewCustomerWelcome(@{SendEmail})
+    arguments:
+      canaryConfig: '*v1.ObjectMetaAccessor'
+    scope: 'prototype'
+    import:
+      - 'k8s.io/apimachinery/pkg/apis/meta/v1'
